[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://levels/test_level.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Characters/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://DialogueBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Grandma.tscn" type="PackedScene" id=6]

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )

[node name="test_level" parent="." index="0" instance=ExtResource( 2 )]

[node name="HUD" parent="." index="1" instance=ExtResource( 3 )]

[node name="pinecone_container" type="Node" parent="." index="2"]

[node name="tree_container" type="Node" parent="." index="3"]

[node name="Player" parent="." index="4" instance=ExtResource( 4 )]

position = Vector2( 130, 200 )

[node name="Camera2D" type="Camera2D" parent="Player" index="3"]

position = Vector2( 210, 90 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Limit" ]

[node name="DialogueBox" parent="." index="5" instance=ExtResource( 5 )]

[node name="Grandma" parent="." index="6" instance=ExtResource( 6 )]

position = Vector2( 260, 300 )

[connection signal="change_scene" from="test_level" to="." method="_on_test_level_change_scene"]

[connection signal="collected_item" from="Player" to="." method="_on_Player_collected_item"]

[connection signal="select" from="Player" to="." method="_on_Player_select"]


